Виправляє розмітку логотипу

--- a/scc/styles.css
+++ b/scc/styles.css
@@ -27,22 +27,22 @@ body {
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.33;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: var(--active-states);
 }
 .accent {
   font-family: Raleway, sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.33;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--overlays-color);
 }
-.menu-link {
+. .menu-link {
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
