--- a/scc/styles.css
+++ b/scc/styles.css
@@ -101,25 +101,28 @@ body {
 }
 /* Buttons */
 .button {
-  font-family: 'Roboto';
+  font-family: Roboto; vsans-serif,
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 0.04em;
-  color: var(--active-states);
-  background-color: var(--button-bg-color);
   cursor: pointer;
 }
 .button.primary {
-  line-height: 1.19;
-}
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: var(--active-states);
+  }
 .button.primary:hover,
 .button.primary:focus {
-  background-color: var(--active-states);
-  color: #ffffff;
+  background-color: var(--overlays-scdr-color);
+  color: var(--active-states);
 }
 .button.secondary {
-  line-height: 1.5;
+    line-height: 1.5;
+    background-color: var(--overlays-scdr-color);
+  color: var(--active-states);
+}
 }
 .button.secondary:hover,
 .button.secondary:focus {
