--- a/scc/styles.css
+++ b/scc/styles.css
@@ -119,9 +119,12 @@ body {
 }
 
 .team {
-  background-color: #ffffff;
+  background-color: var(--overlays-scdr-color);
 }
 
+.team-list-item {
+  background-color: #ffffff;
+}
 /* Footer */
 .footer {
   background-color: var(--overlays-color);
@@ -159,7 +162,7 @@ body {
 
 .button.secondary:hover,
 .button.secondary:focus {
-  background-color: var(--active-states);
+  background-color: #404bbf;
   color: #ffffff;
 }
 
