--- a/scc/styles.css
+++ b/scc/styles.css
@@ -181,6 +181,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: var(--main-text-color);
 }
 
 /* PAGE PORTFOLIO */
